--- a/sucos/templates/modelo/base.html
+++ b/sucos/templates/modelo/base.html
@@ -11,6 +11,8 @@
 
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/estilo.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
 </head>
@@ -33,12 +35,12 @@
 
 
     <!-- DESTAQUE / BANNER -->
-    {% block destaque %}
+    <!-- {% block destaque %}
     <div class="jumbotron text-white text-center mb-0 destaque-banner">
         <h1 class="display-4">Bem-vindo ao Sistema de Sucos!</h1>
         <p class="lead">Controle de vendas, produção e relatórios em um só lugar.</p>
     </div>
-    {% endblock %}
+    {% endblock %} -->
     
 
     <!-- CONTEÚDO PRINCIPAL -->
